--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,29 +11,31 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
+    "@rainbow-me/rainbowkit": "^1.3.3",
+    "@types/react-router-dom": "^5.3.3",
+    "autoprefixer": "^10.4.17",
+    "ethers": "^6.11.1",
     "next": "14.1.0",
+    "postcss": "^8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "ethers": "^6.11.1",
-    "wagmi": "^1.4.13",
-    "viem": "^1.21.4",
-    "@rainbow-me/rainbowkit": "^1.3.3",
+    "react-router-dom": "^7.6.0",
     "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.35",
-    "autoprefixer": "^10.4.17",
-    "@headlessui/react": "^1.7.18",
-    "@heroicons/react": "^2.1.1"
+    "viem": "^1.21.4",
+    "wagmi": "^1.4.13"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.2.1",
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
-    "typescript": "^5.3.3",
-    "jest": "^29.7.0",
-    "@testing-library/react": "^14.2.1",
-    "@testing-library/jest-dom": "^6.4.2",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
-    "prettier": "^3.2.5"
+    "jest": "^29.7.0",
+    "prettier": "^3.2.5",
+    "typescript": "^5.3.3"
   }
-} 
+}
