--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,29 +2,22 @@
   "name": "bingoweb3-frontend",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "test": "jest",
     "test:watch": "jest --watch"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
-    "@rainbow-me/rainbowkit": "^1.3.3",
-    "@types/react-router-dom": "^5.3.3",
-    "autoprefixer": "^10.4.17",
-    "ethers": "^6.11.1",
-    "next": "14.1.0",
-    "postcss": "^8.4.35",
+    "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.6.0",
-    "tailwindcss": "^3.4.1",
-    "viem": "^1.21.4",
-    "wagmi": "^1.4.13"
+    "react-router-dom": "^6.22.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
@@ -32,10 +25,18 @@
     "@types/node": "^20.11.17",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.1.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.5",
     "jest": "^29.7.0",
+    "postcss": "^8.4.35",
     "prettier": "^3.2.5",
-    "typescript": "^5.3.3"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.3.3",
+    "vite": "^5.1.3"
   }
 }
