--- a/frontendv2/package.json
+++ b/frontendv2/package.json
@@ -39,7 +39,7 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/ssr": "latest",
     "@supabase/supabase-js": "latest",
-    "@tanstack/react-query": "latest",
+    "@tanstack/react-query": "5.77.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -61,7 +61,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "viem": "latest",
-    "wagmi": "latest",
+    "wagmi": "2.15.4",
     "zod": "^3.24.1"
   },
   "devDependencies": {
