--- a/frontendv2/package.json
+++ b/frontendv2/package.json
@@ -61,7 +61,7 @@
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
     "viem": "latest",
-    "wagmi": "2.15.4",
+    "wagmi": "latest",
     "zod": "^3.24.1"
   },
   "devDependencies": {
