--- a/frontendv2/package.json
+++ b/frontendv2/package.json
@@ -60,7 +60,7 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "viem": "latest",
+    "viem": "2.30.5",
     "wagmi": "latest",
     "zod": "^3.24.1"
   },
@@ -70,6 +70,6 @@
     "@types/react-dom": "^19",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
-    "typescript": "^5"
+    "typescript": "3.9.2"
   }
 }
