feat: Add debugging and deployment scripts for Bingo and Cartela contracts
- Introduced debug-contracts.js for diagnosing contract interactions and network connectivity.
- Created deploy-contracts.sh for comprehensive deployment of Bingo and Cartela contracts with checks for Anvil and Foundry.
- Added deploy-simple.sh for a streamlined deployment process of Cartela and Bingo contracts.
- Implemented deployment.json to store deployed contract addresses and metadata.
- Developed extract-abis.js to extract and update ABIs from Foundry artifacts for frontend usage.
- Added quick-deploy.sh for rapid deployment of contracts with minimal setup.
- Implemented setup-vrf.js for configuring Chainlink VRF with necessary funding and consumer setup.
- Created start-anvil.sh to initiate Anvil with mainnet forking capabilities.

--- a/contracts/foundry.toml
+++ b/contracts/foundry.toml
@@ -29,5 +29,10 @@ remappings = [
 
 # Allow reading files from the optimism folder
 fs_permissions = [
-    { access = "read", path = "./lib/optimism" }
+    { access = "read", path = "./lib/optimism" },
+    { access = "read-write", path = "./deployment.json" },
+    { access = "read-write", path = "../frontendv2/scripts/" },
+    { access = "read-write", path = "../frontendv2/scripts/deployment.json" },
+    { access = "read", path = "./out/" },
+    { access = "read", path = "./" }
 ]
